# detonate

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  PROMPT.md  README.md  SECURITY.md  docker-compose.dev.yml  docker-compose.yml
api/: Dockerfile  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 01acff0981bf_add_ai_tables_and_submission_ai_columns.py  a36a2c0cab7f_initial_schema.py  b8c3a1d42e9f_add_machine_pool_columns.py  b8e3f2a71c04_add_celery_task_id_to_analyses.py  c7b4b0983128_phase3_auth_teams_comments_webhooks_.py  d1f2a3b4c5d6_add_challenges_tables.py
api/detonate/: config.py  database.py  main.py
api/detonate/api/: deps.py
api/detonate/machinery/: base.py  docker.py  qemu.py
api/detonate/models/: __init__.py  ai_task.py  analysis.py  api_key.py  challenge.py  comment.py  conversation.py  machine.py  submission.py  team.py  user.py  webhook.py
api/detonate/prompts/: agent.py  classify.py  mitre.py  summarize.py  system.py
api/detonate/schemas/: ai.py  analysis.py  auth.py  challenge.py  chat.py  comment.py  health.py  machine.py  mitre.py  network_analysis.py  search.py  settings.py  static_analysis.py  team.py  (+4 more)
api/tests/: conftest.py  e2e_ai_test.sh  e2e_dynamic_test.sh  generate_test_sample.py  test_auth.py  test_challenges.py  test_comments.py  test_dashboard.py  test_health.py  test_ioc_export.py  test_new_analyzers.py  test_reports.py  test_search.py  test_settings.py  test_static_analysis.py  test_submissions.py  test_teams.py  test_threat_intel.py  test_url_submit.py  test_webhooks.py  test_yara.py
(+244 files in other folders)
